feat: added record type selection screen
